# tend

./: .capture.yaml  .gitignore  LICENSE  README.md  pyproject.toml
.benchmarks/: behavioral-2026-06-18-084350.json  behavioral-2026-06-18-084350.md  behavioral-2026-06-18-125330.json  behavioral-2026-06-18-125330.md  behavioral-2026-07-01-210558.json  behavioral-2026-07-01-210558.md  behavioral-2026-07-01-210843.json  behavioral-2026-07-01-210843.md  behavioral-2026-07-01-211003.json  behavioral-2026-07-01-211003.md  behavioral-2026-07-06-113231.json  behavioral-2026-07-06-113231.md  behavioral-2026-07-06-113304.json  behavioral-2026-07-06-113304.md  behavioral-2026-07-06-160640.json  behavioral-2026-07-06-160640.md  mechanical-2026-06-18-083136.json  mechanical-2026-06-18-083136.md  mechanical-2026-07-01-210532.json  mechanical-2026-07-01-210532.md
.claude-plugin/: marketplace.json  plugin.json
.claude/carryover/: STATE.md
.claude/tend/: STATE.md
.github/workflows/: ci.yml
bench/: __init__.py  __main__.py  behavioral.py  interactive.py  mechanical.py  outcome.py
bench/corpus/: README.md  real-01.txt  real-02.txt  real-03.txt  real-04.txt  real-05.txt  real-06.txt  real-07.txt  real-08.txt  real-09.txt  real-10.txt  real-11.txt  real-12.txt  real-13.txt  real-14.txt  real-15.txt  real-16.txt  real-17.txt  real-18.txt  real-19.txt  real-20.txt  real-21.txt  real-22.txt
carryover/: advisor.py  agentguard.py  anchor.py  cli.py  config.py  ctxmetrics.py  flags.py  hook.py  hookio.py  install.py  ledger.py  offload.py  paths.py  precompact.py  readguard.py  sessionstart.py  state.py  statusline.py  tokens.py
docs/: architecture.md  benchmark-results.md  swarm-review-2026-06-10.md  test-evidence.md
docs/superpowers/plans/: 2026-06-09-tend-context-harness.md  2026-06-10-tend-v02-bugfixes.md  (+1 more)
hooks/: hooks.json
tend/: __init__.py  advisor.py  agentguard.py  anchor.py  boundary.py  cli.py  config.py  ctxmetrics.py  flags.py  hook.py  hookio.py  install.py  ledger.py  offload.py  paths.py  precompact.py  readguard.py  retention.py  sessionstart.py  state.py  statusline.py  tokens.py
tests/: conftest.py  test_advisor.py  test_agentguard.py  test_anchor.py  test_anchor_adaptive.py  test_bench_behavioral.py  test_bench_corpus.py  test_bench_outcome.py  test_boundary.py  test_cli.py  test_compat.py  test_config.py  test_ctxmetrics.py  test_cwd_drift.py  test_find.py  test_flags.py  test_hook_dispatch.py  test_hookio.py  test_install.py  test_integration.py  test_ledger.py  test_offload.py  test_paths.py  test_precompact.py  test_readguard.py  test_retention.py  test_sessionstart.py  test_state.py  test_statusline.py  test_tokens.py
(+2 files in other folders)
