[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-tend"
version = "0.1.0"
description = "Context-hygiene harness for Claude Code"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.scripts]
tend = "tend.cli:main"

[tool.setuptools.packages.find]
include = ["tend*"]
