[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-tend"
version = "0.2.1"
description = "Context hygiene for Claude Code - keeps long sessions sharp: offloads oversized outputs, externalizes session state, anchors the goal, curates compaction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]
keywords = ["claude-code", "claude", "context-window", "llm", "agents", "hooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/varmabudharaju/tend"
Repository = "https://github.com/varmabudharaju/tend"
Issues = "https://github.com/varmabudharaju/tend/issues"

[project.scripts]
tend = "tend.cli:main"

[tool.setuptools.packages.find]
include = ["tend*"]
