[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carryover"
version = "0.4.0"
description = "Context gardening for Claude Code - keeps long sessions sharp: offloads oversized outputs, externalizes session state, anchors the goal, curates compaction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []
keywords = ["claude-code", "claude", "context-window", "llm", "agents", "hooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/varmabudharaju/carryover"
Repository = "https://github.com/varmabudharaju/carryover"
Issues = "https://github.com/varmabudharaju/carryover/issues"

[project.scripts]
carryover = "carryover.cli:main"
tend = "carryover.cli:main"  # deprecated alias, kept for pre-rename installs

[tool.setuptools.packages.find]
include = ["carryover*", "tend*"]
